tests/ui/lint/snapshots/manual_map_result.snap
---
source: tests/ui/lint/mod.rs
---
  ● Manual map
   ╭─[test.lis:4:11]
 3 │   let r: Result<int, string> = Ok(1)
 4 │   let _ = match r {
   ·           ──┬──
   ·             ╰── can be simpler
 5 │     Ok(v) => Ok(v + 1),
   ╰────
  help: Replace this `match` with `.map(...)` · code: [lint.manual_map]
