tests/ui/lint/snapshots/manual_map_reversed_arms.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Manual map
   ╭─[test.lis:4:11]
 3 │   let o: Option<int> = Some(1)
 4 │   let _ = match o {
   ·           ──┬──
   ·             ╰── can be simpler
 5 │     None => None,
   ╰────
  help: Replace this `match` with `.map(...)` · code: [lint.manual_map]
