tests/ui/lint/snapshots/manual_min_max_greater_than_or_equal_reversed.snap
---
source: tests/ui/lint/mod.rs
---
  ● Manual `min`
   ╭─[test.lis:3:3]
 2 │ pub fn f(a: int, b: int) -> int {
 3 │   if a >= b { b } else { a }
   ·   ─────────────┬────────────
   ·                ╰── can use `min()`
 4 │ }
   ╰────
  help: This `if` returns the smaller of its two operands, same as `min()` · code: [lint.manual_min_max]
