tests/ui/lint/snapshots/manual_ok_err_err.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Manual `err`
   ╭─[test.lis:4:11]
 3 │   let r: Result<int, string> = Ok(1)
 4 │   let _ = match r {
   ·           ──┬──
   ·             ╰── can be simpler
 5 │     Ok(_) => None,
   ╰────
  help: Replace this `match` with `.err()` · code: [lint.manual_ok_err]
