tests/ui/lint/snapshots/manual_ok_err_ok.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Manual `ok`
   ╭─[test.lis:4:11]
 3 │   let r: Result<int, string> = Ok(1)
 4 │   let _ = match r {
   ·           ──┬──
   ·             ╰── can be simpler
 5 │     Ok(x) => Some(x),
   ╰────
  help: Replace this `match` with `.ok()` · code: [lint.manual_ok_err]
